fix: fix alignment of elements in speed dial

--- a/packages/vue-ui/src/assets/css/page.css
+++ b/packages/vue-ui/src/assets/css/page.css
@@ -35,7 +35,7 @@
 }
 
 .page > .speed-dial {
-  align-self: center;
+  align-items: center;
   bottom: 5%;
   display: flex;
   grid-area: toolbar;
